# DDD-backend-example

./: .gitignore
RESTAURANT_DDD/: CMakeLists.txt  README.md  UBIQUITOUS_LANGUAGE.md  insomnia_collection.json
RESTAURANT_DDD/db/: seed.sql
RESTAURANT_DDD/src/: main.cpp
RESTAURANT_DDD/src/finance/adapters/: http_finance_controller.cpp  http_finance_controller.h  sqlite_finance_repository.cpp  sqlite_finance_repository.h
RESTAURANT_DDD/src/finance/application/: finance_service.cpp  finance_service.h
RESTAURANT_DDD/src/finance/domain/: cost_item.cpp  cost_item.h  finance_events.h  food_cost_ratio.h  waste_record.cpp  waste_record.h
RESTAURANT_DDD/src/finance/ports/: i_finance_event_publisher.h  i_finance_repository.h
RESTAURANT_DDD/src/floor/adapters/: http_floor_controller.cpp  http_floor_controller.h  sqlite_floor_repository.cpp  sqlite_floor_repository.h
RESTAURANT_DDD/src/floor/application/: floor_service.cpp  floor_service.h
RESTAURANT_DDD/src/floor/domain/: cover.h  floor_events.h  menu_item.cpp  menu_item.h  seating.cpp  seating.h  table.cpp  table.h  walk_in.h
RESTAURANT_DDD/src/floor/ports/: i_floor_event_publisher.h  i_floor_repository.h
RESTAURANT_DDD/src/kitchen/adapters/: http_kitchen_controller.cpp  http_kitchen_controller.h  sqlite_kitchen_repository.cpp  sqlite_kitchen_repository.h
RESTAURANT_DDD/src/kitchen/application/: kitchen_service.cpp  kitchen_service.h
RESTAURANT_DDD/src/kitchen/domain/: dish.cpp  dish.h  fire_order.cpp  fire_order.h  fire_order_line.h  kitchen_events.h  station.h
RESTAURANT_DDD/src/kitchen/ports/: i_kitchen_event_publisher.h  i_kitchen_repository.h
RESTAURANT_DDD/src/shared_kernel/: db.cpp  db.h  domain_event.h  event_bus.cpp  event_bus.h  types.h
RESTAURANT_DDD/tests/finance/: cost_item_test.cpp  finance_service_test.cpp  food_cost_ratio_test.cpp  waste_record_test.cpp
RESTAURANT_DDD/tests/floor/: floor_service_test.cpp  menu_item_test.cpp  seating_test.cpp  table_test.cpp
RESTAURANT_DDD/tests/integration/: cross_context_events_test.cpp
RESTAURANT_DDD/tests/kitchen/: dish_test.cpp  fire_order_test.cpp  kitchen_service_test.cpp
RESTAURANT_DDD/tests/shared_kernel/: event_bus_test.cpp  types_test.cpp
RESTAURANT_NO_DDD/: CMakeLists.txt  README.md
RESTAURANT_NO_DDD/db/: schema.sql
RESTAURANT_NO_DDD/src/: main.cpp
RESTAURANT_NO_DDD/src/controllers/: item_controller.cpp  item_controller.h  order_controller.cpp  order_controller.h  reservation_controller.cpp  reservation_controller.h  table_controller.cpp  table_controller.h
RESTAURANT_NO_DDD/src/models/: item.cpp  item.h  order.cpp  order.h  order_line.cpp  order_line.h  reservation.cpp  reservation.h  table.cpp  table.h
RESTAURANT_NO_DDD/src/repositories/: item_repository.cpp  item_repository.h  order_repository.cpp  order_repository.h  reservation_repository.cpp  reservation_repository.h  table_repository.cpp  table_repository.h
RESTAURANT_NO_DDD/src/services/: item_service.cpp  item_service.h  order_service.cpp  order_service.h  reservation_service.cpp  reservation_service.h  table_service.cpp  table_service.h
RESTAURANT_NO_DDD/tests/: item_test.cpp  order_test.cpp  reservation_test.cpp  service_test.cpp  table_test.cpp
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
